public enum Difficulty {
    EASY,
    HARD,
    VERY_HARD,
    INSANE;
}